--- 0.1.0 2019-xx-xx ---
* Old project on Google Code is dead. Passive development of this project will
  be continued at new location: https://github.com/eiskaltdcpp/freedcpp
* Fix segfault when user is trying to register user command which name is
  already exists.
* Fix opening of hub from favorites hubs list by [Enter] key from keyboard.
* Core: fix build with GCC 8.x.
* Core: add compatibility with OpenSSL >= 1.1.0.
* Core: add support of TLS 1.2.
* GUI: update homepage URL.
* Update desktop file.
* Fix spelling errors.