@@ -155,7 +155,14 @@ SettingsManager::SettingsManager()
 	setDefault(IGNORE_BOT_PMS, false);
 	setDefault(LIST_DUPES, true);
 	setDefault(BUFFER_SIZE, 64);
-	setDefault(HUBLIST_SERVERS, "http://dchublist.com/hublist.xml.bz2;http://www.hublista.hu/hublist.xml.bz2;http://hublist.openhublist.org/hublist.xml.bz2;");
+	setDefault(HUBLIST_SERVERS,
+		"https://www.te-home.net/?do=hublist&get=hublist.xml.bz2;"
+		"https://tankafett.biz/?do=hublist&get=hublist.xml.bz2;"
+		"https://dchublist.ru/hublist.xml.bz2;"
+		"https://dchublist.org/hublist.xml.bz2;"
+		"https://dchublist.biz/hublist.xml.bz2;"
+		"https://hublist.eu/hublist.xml.bz2"
+		);
 	setDefault(DOWNLOAD_SLOTS, 6);
 	setDefault(MAX_DOWNLOAD_SPEED, 0);
 	setDefault(LOG_DIRECTORY, Util::getPath(Util::PATH_USER_LOCAL) + "Logs" PATH_SEPARATOR_STR);
