@@ -7,6 +7,7 @@
 * Core: fix build with GCC 8.x.
 * Core: add compatibility with OpenSSL >= 1.1.0.
 * Core: add support of TLS 1.2.
+* Core: update list of hub list servers.
 * GUI: update homepage URL.
 * Update desktop file.
 * Fix spelling errors.
